--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 			<td>
 				<table border width="100%" style="text-align: center;">
 					<tr>
-						<td colspan="2">Nested Table 2</td>
+						<th>Nested Table 2</th>
 					</tr>
 					<tr>
 						<td>Column 1</td>
@@ -28,7 +28,7 @@
 			<td>
 				<table border width="100%" style="text-align: center;margin: 30px 0">
 					<tr>
-						<td>Nested Table 1</td>
+						<th>Nested Table 1</th>
 					</tr>
 					<tr>
 						<td colspan="2">
@@ -46,7 +46,7 @@
 			<td>
 				<table border width="100%" style="text-align:center;margin-top: 20px;margin-bottom: 20px">
 					<tr>
-						<td colspan="2">Nested Table 3</td>
+						<th>Nested Table 3</th>
 					</tr>
 					<tr>
 						<td><a href="#nested">Nested Table</a></td>
@@ -57,7 +57,7 @@
 			<td>
 				<table border width="100%">
 					<tr>
-						<td colspan="2">Nested Table 4</td>
+						<th>Nested Table 4</th>
 					</tr>
 					<tr>
 						<td style="background-color:#000;color:#fff;text-align:center;">
