--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 						<th colspan="2">Nested Table 2</th>
 					</tr>
 					<tr>
-						<td>Column 1</td>
-						<td>Column 2</td>
+						<th>Column 1</th>
+						<th>Column 2</th>
 					</tr>
 					<tr>
 						<td>abc</td>
@@ -57,7 +57,7 @@
 			<td>
 				<table border width="100%">
 					<tr>
-						<th colspan="2">Nested Table 4</th>
+						<th>Nested Table 4</th>
 					</tr>
 					<tr>
 						<td style="background-color:#000;color:#fff;text-align:center;">
